@@ -1003,20 +1003,21 @@ GM2-VERIFY-AUTO    = P1SyntaxCheck.mod P2Build.mod     P3Build.mod     PHBuild.m
 #
 
 GM2-LIBS-ISO-MODS  = ChanConsts.mod    CharClass.mod   ClientSocket.mod \
-                     ConvTypes.mod  \
+                     ConvTypes.mod \
                      EXCEPTIONS.mod    IOChan.mod      IOLink.mod \
                      IOConsts.mod      IOLink.mod      LongMath.mod \
                      M2EXCEPTION.mod   M2RTS.mod       ProgramArgs.mod \
                      RawIO.mod \
                      RTdata.mod        RTentity.mod \
                      RTgen.mod         RTgenif.mod     RTio.mod \
-                     RTfio.mod         \
-                     RealMath.mod      RndFile.mod     \
+                     RTfio.mod \
+                     RealMath.mod      RndFile.mod \
                      SeqFile.mod       SimpleCipher.mod \
                      StdChans.mod      \
                      STextIO.mod       Storage.mod     StreamFile.mod \
                      Strings.mod       \
-                     SYSTEM.mod        TERMINATION.mod TextIO.mod        
+                     SYSTEM.mod        TERMINATION.mod TextIO.mod \
+                     WholeConv.mod
 
 GM2-LIBS-ISO-C     = ErrnoCategory.c wrapsock.c
 
