@@ -50,9 +50,9 @@ PROCEDURE round (x: LONGREAL): INTEGER;
   (* Returns the value of x rounded to the nearest integer *)
 
 PROCEDURE IsRMathException (): BOOLEAN;
-  (* Returns TRUE if the current coroutine is in the exceptional execution state
-     because of the raising of an exception in a routine from this module; otherwise
-     returns FALSE.
+  (* Returns TRUE if the current coroutine is in the exceptional
+     execution state because of the raising of an exception in a
+     routine from this module; otherwise returns FALSE.
   *)
 
 END LongMath.
