@@ -1,3 +1,12 @@
+2008-11-12       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gm2-libs-iso/WholeConv.mod:  finished implementation
+	  module.
+	* gm2/Make-lang.in:  added WholeConv.mod to list of ISO
+	  modules to be built and installed.
+	* gm2/gm2-libs-iso/README.texi:  updated list of completed
+	  modules.
+
 2008-11-11       Gaius Mulley <gaius@gnu.org>
 
 	* gm2/gm2spec.c:  modified add_default_directories
